tests/ui/consts/const-eval/unwind-abort.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/unwind-abort.rs:2:5
   |
LL |     panic!()
   |     ^^^^^^^^ the evaluated program panicked at 'explicit panic', $DIR/unwind-abort.rs:2:5
   |
note: inside `foo`
  --> $DIR/unwind-abort.rs:2:5
   |
LL |     panic!()
   |     ^^^^^^^^
note: inside `_`
  --> $DIR/unwind-abort.rs:5:15
   |
LL | const _: () = foo();
   |               ^^^^^
   = note: this error originates in the macro `$crate::panic::panic_2015` which comes from the expansion of the macro `panic` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
